# PaniniFS-Research

./: .gitmodules  COPILOTAGE_SETUP.md  COPILOT_SESSION_NOTES.md  DIAGNOSTIC_RX480_INSTALLATION_20250919.md  JOURNAL_CONVERSATIONS.md  JOURNAL_SESSION_GEOMETRIE_DHATU_20250119.md  JOURNAL_SESSION_GEOMETRIE_DHATU_20250919.md  MIGRATION.md  MIGRATION_PLAN.md  MISE_A_JOUR_RX480_SPECS_20250919.md  PAGER_TROUBLESHOOTING.md  PROJECT_STATUS_ROADMAP.md  PR_TEMPLATE.md  RAPPORT_DRIVERS_RX480_OPENSUSE_20250919.md  RAPPORT_VALIDATION_DHATU_GEOMETRIQUE_20250919.md  README.md  RECAPITULATIF_FINAL_VALIDATION.md  SYNTHESE_FINALE_SOLUTIONS_MULTILINGUES.md  setup_copilotage.sh  test-results.json
copilotage/: README.md  config.yml
discoveries/: DECOUVERTE_EXPERIMENTS_CROSSLINGUAL.md
docs/: ARCHIVE-INSIGHTS.md  DONNEES_PHONETIQUE_DEVELOPPEMENTALE.md  ETAT-TRIANGLE-RECHERCHE.md  EVOLUTION_PANINI_SPEAK_SESSIONS.md  README.md  ROADMAP-RECHERCHE.md  SYNTHESE-RECHERCHE.md  SYNTHESE_CONCEPTUELLE_INTEGRATIVE.md
language/: APPRENTISSAGE_ADAPTATIF.md  ECRITURE_LINEAIRE_PANINISCRIPT.md  ECRITURE_NONLINEAIRE_PANINIGRAPH.md  GESTUELLE_PANINISPEAK.md  ICONOGRAPHIE_MULTIMODALE.md  OPTIMISATION_SYMBOLES.md  PANINISPEAK_ARCHITECTURE.md  PANINISPEAK_SYNTHESE_COMPLETE.md  PHONOLOGIE_PANINISPEAK.md  PRINCIPES_INUKTITUT_ADAPTATION.md  PROTOTYPE_NONLINEAIRE_SVG.md  REVOLUTION_SIMPLIFICATION.md  SUCCES_MULTIMODAL_FINAL.md  SYNTHESE_SYSTEME_ROTATIONNEL.md  SYSTEME_SIMPLIFIE_SVG.md  VALIDATION_CROSSLINGUISTIQUE.md  prototype_paninigraph.html
tech/rust/: Cargo.toml
tech/rust/src/: lib.rs  main.rs
(+359 files in other folders)
