[package]
name = "paninifs-core"
version = "0.1.0"
edition = "2021"
description = "PaniniFS - Semantic filesystem with dhÄtu-based compression and FUSE integration"

[dependencies]
fuser = "0.13"
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
clap = { version = "4.0", features = ["derive"] }
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"

[lib]
name = "paninifs_core"
path = "src/lib.rs"

[[bin]]
name = "paninifs"
path = "src/main.rs"